# ProjetBTS_Front

./: api.js  dashboard.css  dashboard.html  dashboard.js  index.html  package-lock.json  package.json  script.js
C++/: CMakeLists.txt
C++/include/: AlertNotifier.h  AlertNotifierStrategy.h  MailAlertNotifierStrategy.h  SMSAlertNotifierStrategy.h
C++/src/: AlertNotifier.cpp  SMSAlertNotifierStrategy.cpp  main.cpp
